--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,24 @@
+@article{abdi2010principal,
+  title={Principal Component Analysis},
+  author={Abdi, Herv{\'e} and Williams, Lynne J},
+  journal={Wiley interdisciplinary reviews: computational statistics},
+  volume={2},
+  number={4},
+  pages={433--459},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@ARTICLE{heteroasd,
+AUTHOR={Lenroot, Rhoshel and Yeung, Pui Ka},    
+TITLE={Heterogeneity within Autism Spectrum Disorders: What have We Learned from Neuroimaging Studies?},      
+JOURNAL={Frontiers in Human Neuroscience},      
+VOLUME={7},           
+YEAR={2013},        
+URL={https://www.frontiersin.org/articles/10.3389/fnhum.2013.00733},
+DOI={10.3389/fnhum.2013.00733}, 
+ISSN={1662-5161},   
+}
 @article{ha2018world,
   title={World models},
   author={Ha, David and Schmidhuber, J{\"u}rgen},
