--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -39,14 +39,14 @@ Chapel Hill\\
 \end{singlespace}
 \end{center}
 
-%5. On the right-hand side of the page, ÒApproved by,Ó followed by lines for the
+%5. On the right-hand side of the page, followed by lines for the
 %signatures of the adviser and four (two for thesis) readers. List
 
 \vfill
 \begin{flushright}
 \begin{minipage}[t]{1.5in} \large
-Approved by:\\
-%To be approved by: \\
+%Approved by:\\
+To be approved by: \\
 Martin Styner \\
 Junier Oliva \\
 Guorong Wu \\
