--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,8 +1,8 @@
-%The word “Abstract” should be centered 2? below the top of the page. 
+%The word √íAbstract√ì should be centered 2? below the top of the page. 
 %Skip one line, then center your name followed by the title of the 
 %thesis/dissertation. Use as many lines as necessary. Centered below the 
-%title include the phrase, in parentheses, “(Under the direction of  
-%_________)” and include the name(s) of the dissertation advisor(s).
+%title include the phrase, in parentheses, √í(Under the direction of  
+%_________)√ì and include the name(s) of the dissertation advisor(s).
 %Skip one line and begin the content of the abstract. It should be 
 %double-spaced and conform to margin guidelines. An abstract should not 
 %exceed 150 words for a thesis and 350 words for a dissertation. The 
@@ -25,11 +25,11 @@
 \vspace{11pt}
 
 \begin{singlespace}
-YOUR M.\ NAME: Your Title in Title Font, but not in all Caps \\
+Ahsan Mahmood: Anomaly Detection in Medical Imaging via Score Matching \\
 (Under the direction of Your Advisor)
 \end{singlespace}
 \end{center}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+...
 
 \clearpage
