--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -6,7 +6,7 @@
 \vspace{2in}
 \begin{singlespace}
 \bf
-Anomaly Detection in Medical Imaging via Score Matching
+Anomaly Detection via Score Matching
 \end{singlespace}
 
 
